entry controller