@@ -10,10 +10,9 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 
+import static java.time.LocalDateTime.parse;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
@@ -22,6 +21,8 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 @WebMvcTest(EntryController.class)
 class EntryControllerTest {
+
+    private static final String API_ENTRIES_URL = "/api/entries";
 
     @Autowired
     private MockMvc mockMvc;
@@ -35,19 +36,19 @@ class EntryControllerTest {
         //Given
         Entry entry1 = new Entry();
         entry1.setId(1);
-        entry1.setEntryTime(LocalDateTime.parse("2024-07-30T16:58:00"));
-        entry1.setLeaveTime(LocalDateTime.parse("2024-07-30T17:58:00"));
+        entry1.setEntryTime(parse("2024-07-30T16:58:00"));
+        entry1.setLeaveTime(parse("2024-07-30T17:58:00"));
 
         Entry entry2 = new Entry();
         entry2.setId(2);
-        entry2.setEntryTime(LocalDateTime.parse("2025-07-30T10:00:00"));
-        entry2.setLeaveTime(LocalDateTime.parse("2025-07-30T12:00:00"));
+        entry2.setEntryTime(parse("2025-07-30T10:00:00"));
+        entry2.setLeaveTime(parse("2025-07-30T12:00:00"));
 
-        List<Entry> entries = Arrays.asList(entry1, entry2);
-        when(entryService.findAllEntries()).thenReturn(entries);
+        when(entryService.findAllEntries())
+                .thenReturn(List.of(entry1, entry2));
 
         //When //Then
-        mockMvc.perform(get("/api/entries/findAll")
+        mockMvc.perform(get(API_ENTRIES_URL)
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$[0].id").value(1))
@@ -63,12 +64,13 @@ class EntryControllerTest {
         //Given
         Entry savedEntry = new Entry();
         savedEntry.setId(1);
-        savedEntry.setEntryTime(LocalDateTime.parse("2024-07-30T16:58:00"));
-        savedEntry.setLeaveTime(LocalDateTime.parse("2024-07-30T17:58:00"));
+        savedEntry.setEntryTime(parse("2024-07-30T16:58:00"));
+        savedEntry.setLeaveTime(parse("2024-07-30T17:58:00"));
 
-        Mockito.when(entryService.createEntry(any(Entry.class))).thenReturn(savedEntry);
+        Mockito.when(entryService.createEntry(any(Entry.class)))
+                .thenReturn(savedEntry);
 
-        String inputJson = """
+        String requestBody = """
                     {
                         "id": "1",
                         "entryTime": "2024-07-30T16:58:00",
@@ -77,10 +79,9 @@ class EntryControllerTest {
                 """;
 
         //When and Then
-        mockMvc.perform(post("/api/entries")
-                        .contentType(MediaType.APPLICATION_JSON).content(inputJson))
+        mockMvc.perform(post(API_ENTRIES_URL)
+                        .contentType(MediaType.APPLICATION_JSON).content(requestBody))
                 .andExpect(status().isCreated())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.id").value(1L))
                 .andExpect(jsonPath("$.entryTime").value("2024-07-30T16:58:00"))
                 .andExpect(jsonPath("$.leaveTime").value("2024-07-30T17:58:00"));
@@ -91,18 +92,19 @@ class EntryControllerTest {
         //Given
         Entry entry1 = new Entry();
         entry1.setId(1);
-        entry1.setEntryTime(LocalDateTime.parse("2024-07-30T16:58:00"));
-        entry1.setLeaveTime(LocalDateTime.parse("2024-07-30T17:58:00"));
+        entry1.setEntryTime(parse("2024-07-30T16:58:00"));
+        entry1.setLeaveTime(parse("2024-07-30T17:58:00"));
 
         Entry entry2 = new Entry();
         entry2.setId(2);
-        entry2.setEntryTime(LocalDateTime.parse("2025-07-30T10:00:00"));
-        entry2.setLeaveTime(LocalDateTime.parse("2025-07-30T12:00:00"));
+        entry2.setEntryTime(parse("2025-07-30T10:00:00"));
+        entry2.setLeaveTime(parse("2025-07-30T12:00:00"));
 
-        when(entryService.findEntriesByMember(any(Integer.class))).thenReturn(List.of(entry1, entry2));
+        when(entryService.findEntriesByMember(any(Integer.class)))
+                .thenReturn(List.of(entry1, entry2));
 
         //When and Then
-        mockMvc.perform(get("/api/entries/1")
+        mockMvc.perform(get(API_ENTRIES_URL+"/member/1")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$[0].id").value(1))
